# Tosticker

./: .gitignore  ARCHITECTURE.md  BUN_REFACTOR.md  CLAUDE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYNC.md  bunfig.toml  index.html  package.json  setup.sh  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
.sisyphus/plans/: tosticker-github-actions.md
docs/: RELEASE_SETUP.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: inspiration.rs  mod.rs  sync.rs  todo.rs
src-tauri/src/db/: mod.rs
src-tauri/src/models/: mod.rs
src/components/: ArchivedTodos.tsx  InspirationForm.tsx  InspirationItem.tsx  InspirationList.tsx  Settings.tsx  Sidebar.tsx  TodoForm.tsx  TodoItem.tsx  TodoList.tsx
src/hooks/: useStore.ts
src/styles/: globals.css
src/types/: index.ts
src/utils/: ai.ts  api.ts  sync.ts
